added new models

--- a/Data-Architecture/Architecture-Types.ipynb
+++ b/Data-Architecture/Architecture-Types.ipynb
@@ -52,6 +52,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Polyglot Persistence and Polyglot Data Stores\n",
+    "\n",
+    "### Polyglot persistence is a fancy term that means using multiple data storage technologies to store different types of data within a single application or system, based upon how the data will be used. Different kinds of data are best kept in different data stores. In short, polyglot persistence means picking the right tool for the right use case. It’s the same idea as the one behind polyglot programming, in which applications are written in a mix of languages to take advantage of different languages’ strengths in tackling different problems."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First, you learned about the two primary types of data processing systems: online transaction processing (OLTP) and online analytical processing (OLAP). OLTP systems are designed for fast, reliable, short transactions, typically in the operational databases that power daily business operations. In contrast, OLAP systems support complex analytical queries, aggregations, and computations used for strategic decision making, typically in a data warehouse. You then learned about the differences between operational and analytical data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
