added new models

--- a/Data-Science-Perspective/Metrics-Guide/metrics.ipynb
+++ b/Data-Science-Perspective/Metrics-Guide/metrics.ipynb
@@ -60,6 +60,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Precision-Recall vs ROC: Precision-recall curves should be used when the positive class is rare or when false positives and false negatives have very different consequences. ROC curves are better when the classes are more balanced.\n",
+    "\n",
+    "### ROC AUC Score: Provides a simple way to compare different models that is not tied to a specific threshold, unlike precision-recall curves that can provide more detail at specific operating thresholds."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
