added new models

--- a/Data-Science-Perspective/Metrics-Guide/metrics.ipynb
+++ b/Data-Science-Perspective/Metrics-Guide/metrics.ipynb
@@ -69,6 +69,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Precision-Recall Curve: \n",
+    "### This is typically the most informative metric for imbalanced datasets. Since these datasets often prioritize the minority class (which might be the class of greater interest, like fraud in banking transactions), focusing on how precisely the model can predict this class (precision) and how many of the actual positive cases it captures (recall) is crucial. The precision-recall curve allows you to examine the trade-off between these two metrics for different thresholds, giving a clear picture of model performance in scenarios where positive class predictions are more critical.\n",
+    "\n",
+    "## ROC Curve and ROC AUC Score: \n",
+    "### While the ROC curve and the AUC score provide a good measure of a model's ability to discriminate between the classes, they might be less informative on their own in the context of highly imbalanced data. This is because the false positive rate, which heavily influences the ROC curve, may not be as critical in contexts where the negative class (majority) vastly outnumbers the positive class. Thus, even a small number of false positives can lead to a misleadingly high false positive rate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
