added new models

--- a/Data-Science-Perspective/Metrics-Guide/metrics.ipynb
+++ b/Data-Science-Perspective/Metrics-Guide/metrics.ipynb
@@ -80,6 +80,25 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Area Under the Precision-Recall Curve (AUC-PR)\n",
+    "### Definition: The AUC-PR summarizes the precision-recall curve, which plots the trade-off between precision and recall for different thresholds. Unlike the F1 score, the AUC-PR provides an aggregate measure of performance across all possible thresholds.\n",
+    "### Interpretation: A higher AUC-PR indicates that, across all thresholds, the model is able to maintain a balance between precision and recall. It does not depend on a specific threshold but evaluates the model's ability to discriminate between classes across all levels of sensitivity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## F1 Score: \n",
+    "### Best used when you want to find the best balance between precision and recall with a particular emphasis on both metrics being equally important. It's useful when you know or can determine the optimal threshold.\n",
+    "## AUC-PR: \n",
+    "### More informative for evaluating models on imbalanced datasets where positive cases are rare and the cost of false negatives is high. It is especially useful when you are uncertain about the threshold or when the operational threshold might change"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
