added new models

--- a/Data-Science-Perspective/Metrics-Guide/metrics.ipynb
+++ b/Data-Science-Perspective/Metrics-Guide/metrics.ipynb
@@ -41,9 +41,9 @@
    "metadata": {},
    "source": [
     "## ROC Curve (Receiver Operating Characteristic Curve)\n",
-    "## What It Is: The ROC curve is a graphical plot that illustrates the diagnostic ability of a binary classifier system as its discrimination threshold is varied. It plots the true positive rate (TPR, or recall) against the false positive rate (FPR, 1 - specificity).\n",
+    "### What It Is: The ROC curve is a graphical plot that illustrates the diagnostic ability of a binary classifier system as its discrimination threshold is varied. It plots the true positive rate (TPR, or recall) against the false positive rate (FPR, 1 - specificity).\n",
     "\n",
-    "## When to Use It: This curve is used widely in binary classification to evaluate the trade-off between sensitivity (ability to detect positives) and specificity (ability to reject negatives) across different thresholds. It’s particularly useful when the classes are more balanced or when false positives have different costs compared to false negatives."
+    "### When to Use It: This curve is used widely in binary classification to evaluate the trade-off between sensitivity (ability to detect positives) and specificity (ability to reject negatives) across different thresholds. It’s particularly useful when the classes are more balanced or when false positives have different costs compared to false negatives."
    ]
   },
   {
