--- a/Deep-Learning/ANN.ipynb
+++ b/Deep-Learning/ANN.ipynb
@@ -41,8 +41,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Backpropagation, short for \"backward propagation of errors,\" is a fundamental algorithm for training artificial neural networks. It is used in conjunction with an optimization method, typically gradient descent, to adjust the weights of neurons in the network to minimize the difference between the actual output and the desired output. This process of adjusting weights based on error is key to learning and improving the accuracy of predictions in tasks like classification, regression, and many others in machine learning."
+    "## Backpropagation\n",
+    "### Backpropagation, short for \"backward propagation of errors,\" is a fundamental algorithm for training artificial neural networks. It is used in conjunction with an optimization method, typically gradient descent, to adjust the weights of neurons in the network to minimize the difference between the actual output and the desired output. This process of adjusting weights based on error is key to learning and improving the accuracy of predictions in tasks like classification, regression, and many others in machine learning."
    ]
   }
  ],
