added new models

--- a/Deep-Learning/ANN.ipynb
+++ b/Deep-Learning/ANN.ipynb
@@ -42,8 +42,23 @@
    "metadata": {},
    "source": [
     "## Backpropagation\n",
-    "### Backpropagation, short for \"backward propagation of errors,\" is a fundamental algorithm for training artificial neural networks. It is used in conjunction with an optimization method, typically gradient descent, to adjust the weights of neurons in the network to minimize the difference between the actual output and the desired output. This process of adjusting weights based on error is key to learning and improving the accuracy of predictions in tasks like classification, regression, and many others in machine learning."
+    "### Backpropagation, short for \"backward propagation of errors,\" is a fundamental algorithm for training artificial neural networks. It is used in conjunction with an optimization method, typically gradient descent, to adjust the weights of neurons in the network to minimize the difference between the actual output and the desired output. This process of adjusting weights based on error is key to learning and improving the accuracy of predictions in tasks like classification, regression, and many others in machine learning.\n",
+    "\n",
+    "### Forward Pass:\n",
+    "\n",
+    "- In this phase, input data is passed through the network layer by layer (from input to output) using the current weights of the connections.\n",
+    "- The final output is obtained and compared with the target value to calculate the error. This error measures how well the network performs with the current weights for the given input."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
