added new models

--- a/Deep-Learning/ANN.ipynb
+++ b/Deep-Learning/ANN.ipynb
@@ -47,18 +47,36 @@
     "### Forward Pass:\n",
     "\n",
     "- In this phase, input data is passed through the network layer by layer (from input to output) using the current weights of the connections.\n",
-    "- The final output is obtained and compared with the target value to calculate the error. This error measures how well the network performs with the current weights for the given input."
+    "- The final output is obtained and compared with the target value to calculate the error. This error measures how well the network performs with the current weights for the given input.\n",
+    "\n",
+    "### Backward Pass (Backpropagation):\n",
+    "\n",
+    "- The error is then propagated back through the network, starting from the output towards the input layer, which is why it’s called \"backpropagation.\"\n",
+    "- During this process, the partial derivatives of the error with respect to each weight (i.e., gradients) are calculated. This is done using the chain rule from calculus, a critical step that allows the contribution of each weight to the overall error to be quantified.\n",
+    "\n",
+    "### Vanishing Gradient Problem:\n",
+    "\n",
+    "- In deep networks, gradients can become very small (vanish) as they are propagated back to earlier layers, making learning very slow or stagnant, especially for neurons in the initial layers."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Using ReLU Activation Function\n",
+    "\n",
+    "- The Rectified Linear Unit (ReLU) has become a popular choice for activation functions in deep networks primarily because it helps to alleviate the vanishing gradient problem. ReLU and its variants (like Leaky ReLU, Parametric ReLU) allow gradients to flow through the network without diminishing them as happens with sigmoid or tanh functions.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Batch Normalization\n",
+    "\n",
+    "- Batch Normalization is a technique where inputs to layers within a network are normalized so that they have mean zero and variance one. This not only helps in faster convergence but also mitigates the problem of vanishing gradients by regularizing the network. By doing so, it allows the use of higher learning rates and eases the training of deep networks."
+   ]
   }
  ],
  "metadata": {
