added new models

--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -112,12 +112,53 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Sagemaker Auto Scaling example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = autoscaling_client.put_scaling_policy(\n",
+    "\n",
+    "   PolicyName='Invocations-ScalingPolicy',\n",
+    "\n",
+    "   ServiceNamespace='sagemaker',\n",
+    "\n",
+    "   ResourceId=resource_id,\n",
+    "\n",
+    "   ScalableDimension='sagemaker:variant:DesiredInstanceCount',\n",
+    "\n",
+    "   PolicyType='TargetTrackingScaling',\n",
+    "\n",
+    "   TargetTrackingScalingPolicyConfiguration={\n",
+    "\n",
+    "       'TargetValue': 4000.0,\n",
+    "\n",
+    "       'PredefinedMetricSpecification': {\n",
+    "\n",
+    "          'PredefinedMetricType':\n",
+    "\n",
+    "             'SageMakerVariantInvocationsPerInstance'},\n",
+    "\n",
+    "        'ScaleInCooldown': 600,\n",
+    "\n",
+    "        'ScaleOutCooldown': 300})"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "machine-learning-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.undefined"
   }
  },
  "nbformat": 4,
