added new models

--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -180,8 +180,52 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def launch_training_job(state, train_data_s3, val_data_s3):\n",
+    "\n",
+    "\n",
+    "    xgb = sagemaker.estimator.Estimator(image, role,\n",
+    "\n",
+    "          instance_count=train_instance_count,\n",
+    "\n",
+    "          instance_type=train_instance_type,\n",
+    "\n",
+    "          output_path=s3_output,\n",
+    "\n",
+    "          enable_sagemaker_metrics=True,\n",
+    "\n",
+    "          sagemaker_session=sess)\n",
+    "\n",
+    "    xgb.set_hyperparameters(\n",
+    "\n",
+    "          objective='binary:logistic',\n",
+    "\n",
+    "          num_round=20)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    ...    \n",
+    "\n",
+    "    xgb.fit(inputs=data_channels,\n",
+    "\n",
+    "            job_name=jobname,\n",
+    "\n",
+    "            experiment_config=experiment_config,\n",
+    "\n",
+    "            wait=False)\n",
+    "\n",
+    "    return xgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
