added new models

--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -226,7 +226,75 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dict_estimator = {}\n",
+    "\n",
+    "for state in df_processed.State.unique()[:5]:\n",
+    "\n",
+    "    print(state)\n",
+    "\n",
+    "    output_dir = f's3://{bucket}/{prefix}/{local_prefix}/by_state'\n",
+    "\n",
+    "    df_state = df_train[df_train['State']==state].drop(labels='State', axis=1)\n",
+    "\n",
+    "    df_state_train, df_state_val = train_test_split(df_state, test_size=0.1, random_state=42,\n",
+    "\n",
+    "                                                    shuffle=True, stratify=df_state['Churn?'])\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    df_state_train.to_csv(f'{local_prefix}/churn_{state}_train.csv', index=False)\n",
+    "\n",
+    "    df_state_val.to_csv(f'{local_prefix}/churn_{state}_val.csv', index=False)\n",
+    "\n",
+    "    sagemaker.s3.S3Uploader.upload(f'{local_prefix}/churn_{state}_train.csv', output_dir)\n",
+    "\n",
+    "    sagemaker.s3.S3Uploader.upload(f'{local_prefix}/churn_{state}_val.csv', output_dir)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    dict_estimator[state] = launch_training_job(state, out_train_csv_s3, out_val_csv_s3)\n",
+    "\n",
+    "    time.sleep(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_PA = dict_estimator['PA'].create_model(\n",
+    "\n",
+    "       role=role, image_uri=image)\n",
+    "\n",
+    "mme = MultiDataModel(name=model_name,               \n",
+    "\n",
+    "       model_data_prefix=model_data_prefix,\n",
+    "\n",
+    "       model=model_PA,\n",
+    "\n",
+    "       sagemaker_session=sess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor = mme.deploy(\n",
+    "\n",
+    "       initial_instance_count=hosting_instance_count,\n",
+    "\n",
+    "       instance_type=hosting_instance_type,\n",
+    "\n",
+    "       endpoint_name=endpoint_name,\n",
+    "\n",
+    "       serializer = CSVSerializer(),\n",
+    "\n",
+    "       deserializer = JSONDeserializer())"
+   ]
   }
  ],
  "metadata": {
