added new models

--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -295,6 +295,35 @@
     "\n",
     "       deserializer = JSONDeserializer())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for state, est in dict_estimator.items():\n",
+    "\n",
+    "    artifact_path = est.latest_training_job.describe()['ModelArtifacts']['S3ModelArtifacts']\n",
+    "\n",
+    "    model_name = f'{state}.tar.gz'\n",
+    "\n",
+    "    mme.add_model(model_data_source=artifact_path,\n",
+    "\n",
+    "                  model_data_path=model_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### So, instead of hosting and paying for five endpoints, we would only host and pay for one endpoint. That's an easy 80% cost saving. With hosting models trained for 50 US states in 1 endpoint instead of 50, that's a 98% cost saving!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
