added new models

--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -323,6 +323,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### The other optimization approach is using a technique called load testing to help us choose the instance and autoscaling policy.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
