added new models

--- a/AWS/Sagemaker.ipynb
+++ b/AWS/Sagemaker.ipynb
@@ -339,7 +339,48 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "sagemaker_client = sess.boto_session.client('sagemaker')\n",
+    "\n",
+    "autoscaling_client = sess.boto_session.client('application-autoscaling')\n",
+    "\n",
+    "endpoint_name = '<endpoint-with-ml.c5-xlarge-instance>'\n",
+    "\n",
+    "resource_id = f'endpoint/{endpoint_name}/variant/AllTraffic'\n",
+    "\n",
+    "response = autoscaling_client.register_scalable_target(\n",
+    "\n",
+    "   ServiceNamespace='sagemaker',\n",
+    "\n",
+    "   ResourceId=resource_id,\n",
+    "\n",
+    "   ScalableDimension='sagemaker:variant:   DesiredInstanceCount',\n",
+    "\n",
+    "   MinCapacity=1,\n",
+    "\n",
+    "   MaxCapacity=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%sh --bg\n",
+    "\n",
+    "export ENDPOINT_NAME='<endpoint-with-ml.c5-xlarge-instance>'\n",
+    "\n",
+    "bind_port=5557\n",
+    "\n",
+    "locust -f load_testing/locustfile.py --worker --loglevel ERROR --autostart --autoquit 10 --master-port ${bind_port} &\n",
+    "\n",
+    "locust -f load_testing/locustfile.py --worker --loglevel ERROR --autostart --autoquit 10 --master-port ${bind_port} &\n",
+    "\n",
+    "locust -f load_testing/locustfile.py --headless -u 500 -r 10 -t 60s \\\n",
+    "\n",
+    "       --print-stats --only-summary --loglevel ERROR \\\n",
+    "\n",
+    "       --autostart --autoquit 10 --master --expect-workers 2 --master-bind-port ${bind_port}"
+   ]
   }
  ],
  "metadata": {
